--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
 <img src="Cautiva.png" alt="Duotone Logo" class="logo" />
 <h1>Reproductor de Video Cautiva</h1>
 <p class="lead">Descubre una experiencia audiovisual sin límites en nuestro sitio web de reproductor de video, donde la calidad se une a la comodidad en un solo clic.</p>
-<a href="https://goo.gl/9zRpe9" target="_blank" class="btn featured-btn btn-green">cargar video</a> <a href="#demos" class="btn featured-btn btn-blue">contacto</a>
+<a href="index.html" class="btn featured-btn btn-green">cargar video</a> <a href="#https://wa.me/543704795620" class="btn featured-btn btn-blue">contacto</a>
 </div>
 </header>
 <center><h1>Seleccione su Empresa</h1></center>
